--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 'use client';
 
-import { useState } from 'react';
+import React, { useState } from 'react';
 import { useForm, FormProvider, useFormContext } from 'react-hook-form';
 import { IData } from '@/store/types';
 import { Tabs, TabsContent, TabsList, TabsTrigger } from '@/components/Tabs';
@@ -9,11 +9,81 @@ import { Email } from "@snb/ds-email";
 import Buttons from './Buttons';
 import { ProgressAlert } from '@snb/ds-progress-alert';
 import { DataDisplay } from "@snb/ds-data-display";
-import  { RadioButton }  from "@snb/ds-radio-button"
 import { tranformBackEntriesOnValues } from '@/utils';
 
+/* =====================================
+   1) Componente CustomRadio (customizado)
+   ===================================== */
+interface CustomRadioProps {
+  name: string;
+  value: string;
+  checked?: boolean;
+  label?: string;
+  disabled?: boolean;
+  onChange?: (value: string) => void;
+  className?: string;
+}
 
-const DomesticInternacionalTab = (data: IData) => {
+function CustomRadio({
+  name,
+  value,
+  checked = false,
+  label,
+  disabled = false,
+  onChange,
+  className = '',
+}: CustomRadioProps) {
+  const handleChange = (e: React.ChangeEvent<HTMLInputElement>) => {
+    onChange?.(e.target.value);
+  };
+
+  return (
+    <label className={`flex items-center cursor-pointer select-none ${className}`}>
+      {/* input "invisível", mas mantém acessibilidade */}
+      <input
+        type="radio"
+        name={name}
+        value={value}
+        checked={checked}
+        disabled={disabled}
+        onChange={handleChange}
+        className="sr-only peer"
+      />
+
+      {/* Círculo externo */}
+      <div
+        className={`
+          h-5 w-5 rounded-full border-2 border-gray-300 
+          flex items-center justify-center
+          peer-checked:border-blue-600
+          ${disabled ? 'opacity-50' : ''}
+        `}
+      >
+        {/* Bolinha interna (aparece somente se checked=true) */}
+        <div className="
+          hidden 
+          peer-checked:block 
+          w-2 
+          h-2 
+          rounded-full 
+          bg-blue-600
+        " />
+      </div>
+
+      {/* Label textual */}
+      {label && (
+        <span className="ml-2 text-[#484A55] font-Figtree text-lg font-semibold leading-5 tracking-tighter">
+          {label}
+        </span>
+      )}
+    </label>
+  );
+}
+
+/* =====================================
+   2) Aba DomesticInternacionalTab
+   ===================================== */
+function DomesticInternacionalTab(data: IData) {
   const { watch, setValue } = useFormContext();
 
   const selectedBank = watch('bank') || '';
@@ -29,77 +99,81 @@ const DomesticInternacionalTab = (data: IData) => {
           {data.messageCutoffTime && (
             <ProgressAlert
               isLayoutInLine={true}
-              cardColor='Yellow'
-              height='56px'
-              cardIcon='WarningCircle'
+              cardColor="Yellow"
+              height="56px"
+              cardIcon="WarningCircle"
             >
               {data.messageCutoffTime}
             </ProgressAlert>
           )}
 
-          <h1 className='my-6 text-[#484A55] font-Figtree text-lg font-semibold leading-5 tracking-tighter'>
+          <h1 className="my-6 text-[#484A55] font-Figtree text-lg font-semibold leading-5 tracking-tighter">
             Select Bank
           </h1>
 
           <div className="flex flex-grow gap-4">
-            <div className='flex items-center w-1/3 space-x-2 px-4 py-6 border border-[#D9D9D9] rounded-md flex-grow'>
-              <RadioButton
-
+            {/* ============= PAYPLUS ============= */}
+            <div className="flex items-center w-1/3 space-x-2 px-4 py-6 border border-[#D9D9D9] rounded-md flex-grow">
+              <CustomRadio
                 name="bank"
+                value="payplus"
+                checked={selectedBank === 'payplus'}
+                onChange={(newValue) => {
+                  setValue('bank', newValue);
+                }}
+              />
+              <label className="text-[#484A55] font-Figtree text-lg font-semibold leading-5 tracking-tighter">
+                Payplus
+              </label>
 
-                onChange={(newValue) => setValue('bank', newValue)}
-
-                styleType="normal"
-              >
-                <label className="text-[#484A55] font-Figtree text-lg font-semibold leading-5 tracking-tighter">
-                  Payplus
-                </label>
-              </RadioButton>
-
-              <div className='bg-[#008056] text-white font-Figtree text-xs font-semibold py-1 px-2 ml-4 rounded-full'>
+              <div className="bg-[#008056] text-white font-Figtree text-xs font-semibold py-1 px-2 ml-4 rounded-full">
                 Default
               </div>
             </div>
 
-            <div className='flex items-center w-1/3 space-x-2 px-4 py-6 border border-[#D9D9D9] rounded-md flex-grow'>
-              <RadioButton
-                value={selectedBank}
+            {/* ========== BANK OF AMERICA ========== */}
+            <div className="flex items-center w-1/3 space-x-2 px-4 py-6 border border-[#D9D9D9] rounded-md flex-grow">
+              <CustomRadio
                 name="bank"
-                onChange={(newValue) => setValue('bank', newValue)}
-                styleType="normal"
-              >
-                <label className="text-[#484A55] font-Figtree text-lg font-semibold leading-5 tracking-tighter">
-                  Bank of America
-                </label>
-              </RadioButton>
+                value="bank-of-america"
+                checked={selectedBank === 'bank-of-america'}
+                onChange={(newValue) => {
+                  setValue('bank', newValue);
+                }}
+              />
+              <label className="text-[#484A55] font-Figtree text-lg font-semibold leading-5 tracking-tighter">
+                Bank of America
+              </label>
 
-              <div className='bg-[#C75300] text-white font-Figtree text-xs font-semibold py-1 px-2 ml-4 rounded-full'>
+              <div className="bg-[#C75300] text-white font-Figtree text-xs font-semibold py-1 px-2 ml-4 rounded-full">
                 Contingency
               </div>
             </div>
           </div>
 
-          <div className='mt-10'>
+          {/* Só para debug, se quiser ver no console: */}
+          <div className="mt-2 text-sm text-gray-500">
+            Selected bank: <strong>{selectedBank || 'None'}</strong>
+          </div>
+
+          <div className="mt-10">
             {data.processIntegration && data.processIntegration.length > 0 && (
               <DataDisplay
-                title='Process Integration: Bank of America'
-                data={[{
-                  Id: "320923457#-983242|239",
-                  Status: "processed",
-                  Date: "2025-11-01T11:49:30.2098749-05:00"
-                }]}
+                title="Process Integration: Bank of America"
+                data={[
+                  {
+                    Id: '320923457#-983242|239',
+                    Status: 'processed',
+                    Date: '2025-11-01T11:49:30.2098749-05:00'
+                  }
+                ]}
               />
             )}
           </div>
         </div>
 
         <div>
-          <Email
-            senderName={""}
-            subjectName={""}
-            attachments={[]}
-            message={""}
-          />
+          <Email senderName="" subjectName="" attachments={[]} message="" />
         </div>
       </div>
 
@@ -110,39 +184,39 @@ const DomesticInternacionalTab = (data: IData) => {
       />
     </TabsContent>
   );
-};
+}
 
-
-const ForeignCurrenciesTab = (data: IData) => {
+/* =====================================
+   3) Aba ForeignCurrenciesTab
+   ===================================== */
+function ForeignCurrenciesTab(data: IData) {
   return (
     <TabsContent value="processing-bank-of-america" className="data-[state=inactive]:hidden">
+      {/* Você pode preencher algo aqui se precisar */}
     </TabsContent>
   );
-};
+}
 
-
-/**
- * TabsFactory principal que decide qual aba renderizar
- * e fornece o FormProvider.
- */
+/* =====================================
+   4) TabsFactory principal
+   ===================================== */
 export default function TabsFactory({ data }: { data: IData }) {
   const [selectedTab, setSelectedTab] = useState('wire-transfer-form');
 
-  // Monta o form:
+  // Prepara o objeto do react-hook-form
   const useFormObject = useForm({
     defaultValues: {
       ...tranformBackEntriesOnValues(data.backEntries),
-      // Você pode iniciar o "bank" com algo (payplus ou bank-of-america) se quiser
-      bank: ''
+      bank: '', // valor inicial do radio
     },
   });
 
   if (!data) return null;
 
-  // Lê o transfer type do backEntries
+  // Lê o "transfer-type" para decidir qual aba abrir
   const transferType = data.backEntries['transfer-type']?.value;
 
-  // Deixa pronto para trocar a aba certa:
+  // Map das abas
   const TranferTypeTabs = {
     'usd-domestic': <DomesticInternacionalTab {...data} />,
     'usd-internacional': <DomesticInternacionalTab {...data} />,
@@ -151,22 +225,38 @@ export default function TabsFactory({ data }: { data: IData }) {
 
   return (
     <Tabs className="min-h-screen w-full p-6">
-      <TabsList className='m-0 p-0 pb-4 w-1/2 list-none border-b border-[#DBDBDB] rounded-none justify-start'>
-        <TabsTrigger value="wire-transfer-form" className={`p-4 font-body font-Figtree text-base font-normal tracking-tighter underline-from-font decoration-skip-ink-none ${selectedTab === 'wire-transfer-form' ? 'border-b-2 border-blue-500' : ''}`} style={{ color: 'var(--text-light-text-secondary, #636574)' }} onClick={() => setSelectedTab('wire-transfer-form')}>
+      <TabsList className="m-0 p-0 pb-4 w-1/2 list-none border-b border-[#DBDBDB] rounded-none justify-start">
+        <TabsTrigger
+          value="wire-transfer-form"
+          className={`p-4 font-body font-Figtree text-base font-normal tracking-tighter underline-from-font decoration-skip-ink-none ${
+            selectedTab === 'wire-transfer-form' ? 'border-b-2 border-blue-500' : ''
+          }`}
+          style={{ color: 'var(--text-light-text-secondary, #636574)' }}
+          onClick={() => setSelectedTab('wire-transfer-form')}
+        >
           Wire Transfer Form
         </TabsTrigger>
 
-        <TabsTrigger value="processing-bank-of-america" className={`p-4 font-body font-Figtree text-base font-normal tracking-tighter underline-from-font decoration-skip-ink-none ${selectedTab === 'processing-bank-of-america' ? 'border-b-2 border-blue-500' : ''}`} style={{ color: 'var(--text-light-text-secondary, #636574)' }} onClick={() => setSelectedTab('processing-bank-of-america')}>
-          {transferType === 'usd-domestic' || transferType === 'usd-internacional' ? 'Processing' : 'Processing: Bank of America'}
+        <TabsTrigger
+          value="processing-bank-of-america"
+          className={`p-4 font-body font-Figtree text-base font-normal tracking-tighter underline-from-font decoration-skip-ink-none ${
+            selectedTab === 'processing-bank-of-america' ? 'border-b-2 border-blue-500' : ''
+          }`}
+          style={{ color: 'var(--text-light-text-secondary, #636574)' }}
+          onClick={() => setSelectedTab('processing-bank-of-america')}
+        >
+          {transferType === 'usd-domestic' || transferType === 'usd-internacional'
+            ? 'Processing'
+            : 'Processing: Bank of America'}
         </TabsTrigger>
       </TabsList>
 
-      {/* ABA 1 */}
+      {/* Aba 1 */}
       <TabsContent forceMount={true} value="wire-transfer-form" className="data-[state=inactive]:hidden">
         <FormFactory data={data} />
       </TabsContent>
 
-      {/* ABA 2 - Envolvemos em <FormProvider> para que o Hook Form seja válido */}
+      {/* Aba 2 (FormProvider para usar react-hook-form nas abas) */}
       <FormProvider {...useFormObject}>
         {transferType && TranferTypeTabs[transferType as keyof typeof TranferTypeTabs]}
       </FormProvider>
