--- a/.gitignore
+++ b/.gitignore
@@ -1,60 +1,3 @@
-import React from 'react';
-
-export interface CustomRadioProps {
-  name: string;
-  value: string;
-  checked?: boolean;
-  onChange?: (value: string) => void;
-}
-
-export const CustomRadio: React.FC<CustomRadioProps> = ({
-  name,
-  value,
-  checked = false,
-  onChange,
-}) => {
-  const handleChange = (e: React.ChangeEvent<HTMLInputElement>) => {
-    onChange?.(e.target.value);
-  };
-
-  // DEBUG
-  console.log('Radio:', { name, value, checked });
-
-  return (
-    <label className="flex items-center cursor-pointer">
-      <input
-        type="radio"
-        name={name}
-        value={value}
-        checked={checked}
-        onChange={handleChange}
-        className="sr-only peer"
-      />
-      <div
-        className={`
-          h-5 w-5 
-          rounded-full 
-          border-2 border-gray-300
-          flex items-center justify-center
-          peer-checked:border-black
-        `}
-      >
-        <div
-          className="
-            hidden
-            peer-checked:block
-            w-2
-            h-2
-            rounded-full
-            bg-black
-          "
-        />
-      </div>
-    </label>
-  );
-};
-
-
 'use client';
 
 import React, { useState } from 'react';
@@ -68,9 +11,9 @@ import { ProgressAlert } from '@snb/ds-progress-alert';
 import { DataDisplay } from "@snb/ds-data-display";
 import { tranformBackEntriesOnValues } from '@/utils';
 
-/* =====================================
+/* =======================================
    1) Componente CustomRadio (customizado)
-   ===================================== */
+   ======================================= */
 interface CustomRadioProps {
   name: string;
   value: string;
@@ -90,6 +33,8 @@ function CustomRadio({
   onChange,
   className = '',
 }: CustomRadioProps) {
+  console.log('[CustomRadio] Render:', { name, value, checked });
+
   const handleChange = (e: React.ChangeEvent<HTMLInputElement>) => {
     onChange?.(e.target.value);
   };
@@ -110,21 +55,25 @@ function CustomRadio({
       {/* Círculo externo */}
       <div
         className={`
-          h-5 w-5 rounded-full border-2 border-gray-300 
+          h-5 w-5 
+          rounded-full 
+          border-2 border-gray-300 
           flex items-center justify-center
           peer-checked:border-black
           ${disabled ? 'opacity-50' : ''}
         `}
       >
         {/* Bolinha interna (aparece somente se checked=true) */}
-        <div className="
-          hidden
-          peer-checked:block 
-          w-2 
-          h-2 
-          rounded-full 
-          bg-black
-        " />
+        <div
+          className="
+            hidden
+            peer-checked:block 
+            w-2 
+            h-2 
+            rounded-full 
+            bg-black
+          "
+        />
       </div>
 
       {/* Label textual */}
@@ -137,13 +86,16 @@ function CustomRadio({
   );
 }
 
-/* =====================================
-   2) Aba DomesticInternacionalTab
-   ===================================== */
+/* ============================================
+   2) Aba DomesticInternacionalTab (exemplo)
+   ============================================ */
 function DomesticInternacionalTab(data: IData) {
   const { watch, setValue } = useFormContext();
-
+  
+  // Observa o valor do campo 'bank' no form
   const selectedBank = watch('bank') || '';
+
+  console.log('[DomesticInternacionalTab] Selected Bank:', selectedBank);
 
   if (!data.requestId) {
     return null;
@@ -169,13 +121,14 @@ function DomesticInternacionalTab(data: IData) {
           </h1>
 
           <div className="flex flex-grow gap-4">
-            {/* ============= PAYPLUS ============= */}
+            {/* ========== PAYPLUS ========== */}
             <div className="flex items-center w-1/3 space-x-2 px-4 py-6 border border-[#D9D9D9] rounded-md flex-grow">
               <CustomRadio
                 name="bank"
                 value="payplus"
                 checked={selectedBank === 'payplus'}
                 onChange={(newValue) => {
+                  console.log('Payplus clicked ->', newValue);
                   setValue('bank', newValue);
                 }}
               />
@@ -188,13 +141,14 @@ function DomesticInternacionalTab(data: IData) {
               </div>
             </div>
 
-            {/* ========== BANK OF AMERICA ========== */}
+            {/* ==== BANK OF AMERICA ==== */}
             <div className="flex items-center w-1/3 space-x-2 px-4 py-6 border border-[#D9D9D9] rounded-md flex-grow">
               <CustomRadio
                 name="bank"
                 value="bank-of-america"
                 checked={selectedBank === 'bank-of-america'}
                 onChange={(newValue) => {
+                  console.log('Bank of America clicked ->', newValue);
                   setValue('bank', newValue);
                 }}
               />
@@ -208,7 +162,7 @@ function DomesticInternacionalTab(data: IData) {
             </div>
           </div>
 
-          {/* Só para debug, se quiser ver no console: */}
+          {/* Área para debug do valor selecionado */}
           <div className="mt-2 text-sm text-gray-500">
             Selected bank: <strong>{selectedBank || 'None'}</strong>
           </div>
@@ -234,6 +188,7 @@ function DomesticInternacionalTab(data: IData) {
         </div>
       </div>
 
+      {/* Botões */}
       <Buttons
         requestId={data.requestId}
         initialRequestData={data}
@@ -243,13 +198,13 @@ function DomesticInternacionalTab(data: IData) {
   );
 }
 
-/* =====================================
-   3) Aba ForeignCurrenciesTab
-   ===================================== */
+/* ========================================
+   3) Aba ForeignCurrenciesTab (exemplo)
+   ======================================== */
 function ForeignCurrenciesTab(data: IData) {
   return (
     <TabsContent value="processing-bank-of-america" className="data-[state=inactive]:hidden">
-      {/* Você pode preencher algo aqui se precisar */}
+      {/* Preencha se necessário */}
     </TabsContent>
   );
 }
@@ -273,7 +228,7 @@ export default function TabsFactory({ data }: { data: IData }) {
   // Lê o "transfer-type" para decidir qual aba abrir
   const transferType = data.backEntries['transfer-type']?.value;
 
-  // Map das abas
+  // Mapeia as possíveis abas:
   const TranferTypeTabs = {
     'usd-domestic': <DomesticInternacionalTab {...data} />,
     'usd-internacional': <DomesticInternacionalTab {...data} />,
@@ -308,16 +263,15 @@ export default function TabsFactory({ data }: { data: IData }) {
         </TabsTrigger>
       </TabsList>
 
-      {/* Aba 1 */}
+      {/* ABA 1: Wire Transfer Form */}
       <TabsContent forceMount={true} value="wire-transfer-form" className="data-[state=inactive]:hidden">
         <FormFactory data={data} />
       </TabsContent>
 
-      {/* Aba 2 (FormProvider para usar react-hook-form nas abas) */}
+      {/* ABA 2: com FormProvider para usar react-hook-form nas abas */}
       <FormProvider {...useFormObject}>
         {transferType && TranferTypeTabs[transferType as keyof typeof TranferTypeTabs]}
       </FormProvider>
     </Tabs>
   );
 }
-
