--- a/.gitignore
+++ b/.gitignore
@@ -1,64 +1,14 @@
-/** @type {import('tailwindcss').Config} */
-module.exports = {
-  darkMode: ["class"], // suporta modo escuro com classe
-  content: [
-    "./src/**/*.{ts,tsx}",
-    "./components/**/*.{ts,tsx}",
-    "./app/**/*.{ts,tsx}",
-  ],
-  theme: {
-    container: {
-      center: true,
-      padding: "2rem",
-      screens: {
-        "2xl": "1400px",
-      },
-    },
-    extend: {
-      colors: {
-        border: "hsl(var(--border))",
-        input: "hsl(var(--input))",
-        ring: "hsl(var(--ring))",
-        background: "hsl(var(--background))",
-        foreground: "hsl(var(--foreground))",
-        primary: {
-          DEFAULT: "hsl(var(--primary))",
-          foreground: "hsl(var(--primary-foreground))",
-        },
-        secondary: {
-          DEFAULT: "hsl(var(--secondary))",
-          foreground: "hsl(var(--secondary-foreground))",
-        },
-        destructive: {
-          DEFAULT: "hsl(var(--destructive))",
-          foreground: "hsl(var(--destructive-foreground))",
-        },
-        muted: {
-          DEFAULT: "hsl(var(--muted))",
-          foreground: "hsl(var(--muted-foreground))",
-        },
-        accent: {
-          DEFAULT: "hsl(var(--accent))",
-          foreground: "hsl(var(--accent-foreground))",
-        },
-        popover: {
-          DEFAULT: "hsl(var(--popover))",
-          foreground: "hsl(var(--popover-foreground))",
-        },
-        card: {
-          DEFAULT: "hsl(var(--card))",
-          foreground: "hsl(var(--card-foreground))",
-        },
-      },
-      borderRadius: {
-        lg: "var(--radius)",
-        md: "calc(var(--radius) - 2px)",
-        sm: "calc(var(--radius) - 4px)",
-      },
-      fontFamily: {
-        sans: ["var(--font-sans)", "sans-serif"],
-      },
-    },
-  },
-  plugins: [require("tailwindcss-animate")],
-};
+ ⨯ ./src/app/globals.css
+Error evaluating Node.js code
+Error: Cannot depend on path (\\?\UNC\safra-pdc\sys\USERS\DanielG\workspace\wire-client-frontend\components.json) outside of root directory (H:\workspace\wire-client-frontend)
+    [at toPath (turbopack:///[project]/postcss.config.mjs/transform.ts:18:11)]
+    [at transform (turbopack:///[project]/postcss.config.mjs/transform.ts:109:17)]
+    [at async run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:23)]
+
+
+ ○ Compiling /_error ...
+ ✓ Compiled /_error in 3.1s
+ GET / 500 in 23428ms
+ ○ Compiling /favicon.ico ...
+ ✓ Compiled /favicon.ico in 2.7s
+ GET /favicon.ico 500 in 3429ms
