--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,80 @@
 import React, { useState } from 'react';
-import Card from '@/components/ui/Card';
 import Search from '@/components/ui/Search';
 
 interface ClientInfo {
-  name: string;
-  id: string;
-  email: string;
-  phone: string;
+  accountName: string;
+  authorizedEmails: string[];
+  kycComments: string;
+  accountOfficer: string;
 }
 
 const mockClientData: ClientInfo = {
-  name: 'João da Silva',
-  id: '123456',
-  email: 'joao.silva@example.com',
-  phone: '(11) 99999-8888',
+  accountName: 'JOHN SMITH ENGINEERING INDUSTRIES S a.r.l.',
+  authorizedEmails: [
+    'email1@mail.com',
+    'email2@mail.com',
+    'email3@mail.com',
+    'kim.marry@email.com',
+    'iasd@email.com',
+  ],
+  kycComments:
+    '04/10/24 - Ok to add mobile phone number as per Mary B email from 1/24/24 at 9:40 AM',
+  accountOfficer: 'John Stuart - BR13',
 };
 
 const ClientSearch: React.FC = () => {
   const [clientInfo, setClientInfo] = useState<ClientInfo | null>(null);
+  const [initiator] = useState('Taya Mullins');
 
   const handleSearchSelect = () => {
     setClientInfo(mockClientData);
   };
 
   return (
-    <div className="max-w-md mx-auto mt-8 p-6 bg-white rounded shadow">
-      <Search
-        placeholder="Pesquisar cliente..."
-        suggestions={[mockClientData.name]}
-        onSelect={handleSearchSelect}
-      />
+    <div className="max-w-lg mx-auto mt-8 p-6 bg-white rounded shadow">
+      <div className="grid grid-cols-2 gap-4">
+        <div>
+          <label className="block text-sm font-medium text-gray-700">Initiator</label>
+          <input
+            type="text"
+            value={initiator}
+            readOnly
+            className="mt-1 block w-full border border-gray-300 rounded-md px-3 py-2 bg-gray-100"
+          />
+        </div>
+        <div>
+          <label className="block text-sm font-medium text-gray-700">
+            CIF or Account Number
+          </label>
+          <Search
+            placeholder="Search Account Number"
+            suggestions={["ABC1234"]}
+            onSelect={handleSearchSelect}
+          />
+        </div>
+      </div>
 
       {clientInfo && (
-        <div className="mt-6">
-          <Card
-            border
-            size="medium"
-            title={clientInfo.name}
-            subtitle={`ID: ${clientInfo.id}`}
-            subtitleInfo={clientInfo.email}
-            status={{ type: "approved", text: "Ativo" }}
-          />
+        <div className="mt-6 p-4 border border-gray-200 rounded-md bg-gray-50">
+          <p className="mb-2 font-semibold">
+            Account Name: {clientInfo.accountName}
+          </p>
+          <p className="mb-2 font-semibold">Authorized Email(s):</p>
+          <div className="flex flex-wrap gap-2">
+            {clientInfo.authorizedEmails.map((email, index) => (
+              <span
+                key={index}
+                className="bg-gray-200 rounded-full px-3 py-1 text-sm"
+              >
+                {email}
+              </span>
+            ))}
+          </div>
+          <p className="mt-3 font-semibold">KYC Comments:</p>
+          <p className="text-sm text-gray-600">{clientInfo.kycComments}</p>
+          <p className="mt-3 text-sm">
+            <span className="font-semibold">Account Officer:</span> {clientInfo.accountOfficer}
+          </p>
         </div>
       )}
     </div>
