--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ const ClientSearch: React.FC = () => {
   };
 
   return (
-    <div className="max-w-lg mx-auto mt-8 p-6 bg-white rounded shadow">
+    <div className="w-full p-6 bg-white rounded shadow">
       <div className="grid grid-cols-2 gap-4">
         <div>
           <label className="block text-sm font-medium text-gray-700">Initiator</label>
